--- a/index.html
+++ b/index.html
@@ -1,75 +1,35 @@
 <!DOCTYPE html>
-
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz</title>
-    <link rel="stylesheet" href="style.css">
+<style>
+body{
+        background-color: rgb(0, 0, 0);
+
+    }
+    h1{
+        color: #3cda30;
+    }
+.flex-container {
+  display: flex;
   
+}
+
+.flex-container > div {
+  background-color: #3cda30;
+  margin: 10px;
+  padding: 20px;
+  font-size: 30px;
+}
+</style>
 </head>
 <body>
 
-    <!-- Info Box -->
-    <div class="info_box">
-        <div class="info-title"><span>Rules of this Quiz</span></div>
-        <div class="info-list">
-            <div class="info">1. You will have only <span>10 seconds</span> per each question.</div>
-            <div class="info">2. Once you select your answer, it can't be undone.</div>
-            <div class="info">3. You'll get rewards on the basis of your correct answers.</div>
-        </div>
-        <div class="buttons">
-            <button class="restart">Continue</button>
-        </div>
-    </div>
+<center><h1>WildLife Quiz</h1></center>
 
-    <!-- Quiz Box -->
-    <div class="quiz_box">
-        <header>
-            <div class="title">Quiz</div>
-            <div class="timer">
-                <div class="time_left_txt">Time Left</div>
-                <div class="timer_sec">10</div>
-            </div>
-            <div class="time_line"></div>
-        </header>
-
-        <section>
-            <div class="que_text">
-                <!-- Here I've inserted question from JavaScript -->
-            </div>
-            <div class="option_list">
-                <!-- Here I've inserted options from JavaScript -->
-            </div>
-        </section>
-
-        <!-- footer of Quiz Box -->
-        <footer>
-            <div class="total_que">
-                <!-- Here I've inserted Question Count Number from JavaScript -->
-            </div>
-            <button class="next_btn">Next</button>
-        </footer>
-    </div>
-
-    <!-- Result Box -->
-    <div class="result_box">
-        <div class="complete_text">You've completed the Quiz!</div>
-        <div class="score_text">
-            <!-- Here I've inserted Score Result from JavaScript -->
-        </div>
-        <div class="buttons">
-            <button class="restart">Retake</button>
-            <button class="quit">Exit</button>
-        </div>
-    </div>
-
-    <!-- Inside this JavaScript file I've inserted Questions and Options only -->
-    <script src="questions.js"></script>
-
-    <!-- Inside this JavaScript file I've coded all Quiz Codes -->
-    <script src="script.js"></script>
-
+<div class="flex-container">
+ <div> <a href="mod-1/index.html">Mod-1</a></div>
+  <div><a href="mod2/index.html">Mod-2</a></div> 
+  <div><a href="mod3/index.html">Mod-2</a></div> 
+</div>
 </body>
-</html>
 </html>
