--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@ body{
   <div><a href="mod2/index.html">Mod-2</a></div> 
   <div><a href="mod3/index.html">Mod-3</a></div>
   <div><a href="mod4/index.html">Mod-4</a></div> 
+  <div><a href="mod5/index.html">Mod-5</a></div> 
 </div>
 </body>
 </html>
