--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@ body{
   <div><a href="mod3/index.html">Mod-3</a></div>
   <div><a href="mod4/index.html">Mod-4</a></div> 
   <div><a href="mod5/index.html">Mod-5</a></div> 
+  <div><a href="mod6/index.html">Mod-6</a></div> 
 </div>
 </body>
 </html>
