--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@ body{
   <div><a href="mod5/index.html">Mod-5</a></div> 
   <div><a href="mod6/index.html">Mod-6</a></div> 
   <div><a href="mod7/index.html">Mod-7</a></div> 
+  <div><a href="mod8/index.html">Mod-8</a></div> 
 </div>
+
+
 </body>
 </html>
