--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@ body{
   <div><a href="mod6/index.html">Mod-6</a></div> 
   <div><a href="mod7/index.html">Mod-7</a></div> 
   <div><a href="mod8/index.html">Mod-8</a></div> 
+  <div><a href="mod9/index.html">Mod-9</a></div> 
 </div>
 
 
