--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@ body{
   <div><a href="mod7/index.html">Mod-7</a></div> 
   <div><a href="mod8/index.html">Mod-8</a></div> 
   <div><a href="mod9/index.html">Mod-9</a></div> 
+  <div><a href="mod10/index.html">Mod-10</a></div> 
+  <div><a href="mod11/index.html">Mod-11</a></div> 
+  <div><a href="mod12/index.html">Mod-11</a></div> 
 </div>
+
 
 
 </body>
