--- a/mod-1/index.html
+++ b/mod-1/index.html
@@ -60,7 +60,7 @@
         </div>
         <div class="buttons">
             <button class="restart">Retake</button>
-            <button class="quit">Exit</button>
+            <button ><a href"https://wildlife-quiz-app.vercel.app/">Exit</a></button>
         </div>
     </div>
 
