--- a/mod-1/index.html
+++ b/mod-1/index.html
@@ -61,6 +61,7 @@
         <div class="buttons">
             <button class="restart">Retake</button>
             <button class="quit">Exit</button>
+            <a href="https://wildlife-quiz-app.vercel.app/"><button>relod</button></a>
         </div>
     </div>
 
